--- a/README.rdoc
+++ b/README.rdoc
@@ -1,19 +1,23 @@
-= genomer
+== Synopsis
 
-Description goes here.
+Genomer is a plugin-based framework for genome finishing. Plugins are installed
+using the RubyGems package management system. Genome files are managed as a
+directory and updated at the command line using the `genomer` command.
 
-== Contributing to genomer
- 
-* Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
-* Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it
-* Fork the project
-* Start a feature/bugfix branch
-* Commit and push until you are happy with your contribution
-* Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
-* Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
+== Installing
+
+Ruby and RubyGems are required to use genomer and related plugins. Genomer is
+installed on the command line using:
+
+  $ gem install genomer-tools
+
+== Contact
+
+Genomer is developed by Michael Barton (www.michaelbarton.me.uk). The source
+code is available on github. Bug reports and feature requests should also be
+made there.
 
 == Copyright
 
-Copyright (c) 2010 Michael Barton. See LICENSE.txt for
-further details.
-
+Genomer copyright (c) 2010 by Michael Barton. Scaffolder is licensed under the
+MIT license. See LICENSE.txt for further details.
